HotelReservation/Content/Site.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
    padding: 0px;
  
}

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */
.body-content {
    padding-left: 1px;
    padding-right: 1px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set widths on the form inputs since otherwise they're 100% wide */
input[type="text"],
input[type="password"],
input[type="email"],
input[type="tel"],
input[type="select"] {
    max-width: 280px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .jumbotron {
        margin-top: 20px;
    }
    .body-content {
        padding: 3px;
    }
}



.topContainer /*navbar*/ 
{

    background-color: #F8F8F8;
    border-color: #E7E7E7;

}


.ol 
{
    padding-left: 40%;
}

.container /*carousel*/
{
    max-width:80%;
    float: right;
}

#mycarousel 
{
    /*padding: 5px 5px 5px 5px;*/
}

.carousel-inner > .item > img,
.carousel-inner > .item > a > img 
{
    width: 100% !important;
    height: 400px !important;
    margin: auto !important;
}


.columnleft 
{
    float: left;
    width:240px;
    /*max-width: 65%;*/
    border: solid 1px black;
    margin: 2px 2px 5px 7px;
    padding: 1px;
    background-color: white;
    min-height: 700px;
}



.column 
{
    float: left;
    max-width: 77.7%;
    border: solid 1px black;
    margin: 2px 2px 5px 20px;
    padding: 1px;
    background-color: white;
    min-height: 700px;
}

@media screen and (max-width: 650px) {


	.columnleft {
		position: center;
        width: 80%;
        max-height:200px;
        padding:1px 1px 1px 1px;
        margin:1px 1px 1px 7px;
        float: none;
	}
	.column  {
		width: 500px;
        height:30%;
		float: none;
		margin: 0;
        padding:1px 1px 1px 1px;
        margin:1px 1px 1px 7px;
	}
    .container{
        width: 100% !important;
        position: relative;
        float:none;
        padding:1px;
        margin:5px 1px 2px 5px;
    }

}

.clear 
{
    clear: both;
}

.row /*footer*/
{
    padding: 0px 0px 0px 0px;
    float: none;
    width: auto;
}

.footer 
{
    background-color: #ff0000;
    width: auto;
}

